test/tests/stages/18_structures/invalid_parse/var_decl_two_tags.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[9]:
  struct
  identifier(x)
  identifier(y)
  {
  int
  identifier(a)
  ;
  }
  ;
